# BlockSolver

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  TODO_LIST.txt  algorithm.cpp  algorithm.hpp  base_cube.cpp  block_cube.cpp  coordinate.cpp  coordinate.hpp  coordinate_block_cube.hpp  cubie_cube.cpp  distributions.txt  main.cpp  pruning_table.hpp  search.hpp
python/: pruning_table_sizes.csv  pruning_table_sizes.py
script/: 123.cpp  123.hpp  222.cpp  222.hpp  223.cpp  223.hpp  223_gen_pruning_table.cpp  223_solve.cpp  CMakeLists.txt  F2L-1.cpp  F2L-1.hpp  F2L-1_solve.cpp  compare_pruning_tables.cpp  multistep.cpp  multistep.hpp  solve_all_12_2x2x3.cpp  three_step_solve.cpp  zz_skeleton.cpp
src/: 123.hpp  222.hpp  223.hpp  2gen.hpp  CMakeLists.txt  F2L-1.hpp  algorithm.hpp  base_cube.hpp  block.hpp  block_cube.hpp  coordinate.hpp  coordinate_block_cube.cpp  coordinate_block_cube.hpp  cubie.hpp  cubie_cube.hpp  defs.txt  generator.hpp  main.cpp  move.hpp  move_table.hpp  multistep.hpp  node.hpp  option.hpp  pruning_table.cpp  pruning_table.hpp  search.hpp  solve.hpp  step.hpp  symmetry.hpp  two_gen.hpp  utils.hpp
test/: 223_pruning_table_test.cpp  2gen_test.cpp  CMakeLists.txt  big_pruning_table_search_test.cpp  block_test.cpp  coordinate_test.cpp  cubie_cube_test.cpp  move_table_test.cpp  multistep_test.cpp  pruning_table_test.cpp  search_test.cpp  step_test.cpp  symmetry_test.cpp  two_gen_test.cpp
